# BareDB

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_test.sh
BareDB/: CMakeLists.txt
BareDB/src/: main.cc
BareDBLib/: CMakeLists.txt
BareDBLib/include/: BareDB.h
BareDBLib/include/calc/: Calc.h
BareDBLib/src/: BareDB.cc  Calc.cc
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_baredb.cc
tests/unit/: CMakeLists.txt  test_calc.cc
